# torch-sandbox

./: .envrc  .gitignore  README.md  flake.nix  pyproject.toml  shell.nix
.devcontainer/: devcontainer.json
modules/: cuda.nix  python.nix
