[tool.poetry]
authors = ["Shikanime Deva <deva.shikanime@sfeir.com>"]
description = "Torch sandbox"
license = "AGPL-3.0"
name = "torch_sandbox"
version = "0.1.0"

[tool.poetry.dependencies]
python = "~3.9"
torch = "^1.10.2"
pynvml = "^11.4.1"
numpy = "^1.22.2"
torchvision = "^0.11.3"

[tool.poetry.dev-dependencies]
black = "^21.11b0"

[tool.black]
target-version = ['py38']

[tool.isort]
profile = "black"
