[tool.poetry]
authors = ["Shikanime Deva <shikanime.deva@shikanime.studio>"]
description = "Torch sandbox"
license = "AGPL-3.0-or-later"
name = "torch_sandbox"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.9"
pynvml = "^11.4.1"
jupyterlab = "^3.4.5"
matplotlib = "^3.5.3"
diffusers = "^0.2.3"
ipywidgets = "^8.0.1"
torch = [
    { url = "https://download.pytorch.org/whl/cu116/torch-1.12.1%2Bcu116-cp39-cp39-linux_x86_64.whl", markers = "sys_platform == 'linux'" },
    { url = "https://download.pytorch.org/whl/cu116/torch-1.12.1%2Bcu116-cp39-cp39-win_amd64.whl", markers = "sys_platform == 'win32'" },
    { version = "=1.12.1", markers = "sys_platform == 'darwin'" }
]

[tool.poetry.dev-dependencies]
black =  "^22.6.0"

[tool.isort]
profile = "black"
